syntax = "proto3";

package authservice;

option go_package="./auth";

// 用户相关消息
message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string avatar = 4;
  string created_at = 5;
  string updated_at = 6;
  bool is_vip = 7;
  string vip_expires_at = 8;
  bool auto_renew = 9;
}

// 用户注册请求
message RegisterReq {
  string username = 1;
  string password = 2;
  string email = 3;
}

// 用户注册响应
message RegisterResp {
  User user = 1;
}

// 用户登录请求
message LoginReq {
  string username = 1;
  string email = 2;
  string password = 3;
}

// 用户登录响应
message LoginResp {
  User user = 1;
  string token = 2;
}

message GetUserInfoReq {
  string user_id = 1;
}

message GetUserInfoResp {
  User user = 1;
}

// 获取单个用户请求
message GetUserReq {
  string user_id = 1;
}

// 获取单个用户响应
message GetUserResp {
  User user = 1;
}

// 更新用户信息请求
message UpdateUserInfoReq {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string avatar = 4;
}

// 更新用户信息响应
message UpdateUserInfoResp {
  User user = 1;
}

// 更新用户密码请求
message UpdateUserPasswordReq {
  string user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

// 更新用户密码响应
message UpdateUserPasswordResp {
}

// 删除用户请求
message DeleteUserReq {
  string user_id = 1;
}

// 删除用户响应
message DeleteUserResp {
}

// 更新用户VIP状态请求
message UpdateUserVipReq {
  string user_id = 1;
  bool is_vip = 2;
  string vip_expires = 3;
}

// 更新用户VIP状态响应
message UpdateUserVipResp {
  User user = 1;
}

message GetUsersReq {
  int32 page = 1;
  int32 page_size = 2;
}

message GetUsersResp {
  repeated User users = 1;
  int32 total = 2;
}

message GetUserCountReq {
}

message GetUserCountResp {
  int32 count = 1;
}

// Auth 服务定义
service Auth {
  rpc Register(RegisterReq) returns (RegisterResp);
  rpc Login(LoginReq) returns (LoginResp);
  rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoResp);
  rpc GetUser(GetUserReq) returns (GetUserResp);
  rpc UpdateUserInfo(UpdateUserInfoReq) returns (UpdateUserInfoResp);
  rpc UpdateUserPassword(UpdateUserPasswordReq) returns (UpdateUserPasswordResp);
  rpc DeleteUser(DeleteUserReq) returns (DeleteUserResp);
  rpc UpdateUserVip(UpdateUserVipReq) returns (UpdateUserVipResp);
  rpc GetUsers(GetUsersReq) returns (GetUsersResp);
  rpc GetUserCount(GetUserCountReq) returns (GetUserCountResp);
}